--- a/Responsive Web Design Certification/Exercices/Learn CSS Colors by Building a Set of Colored Markers/index.html
+++ b/Responsive Web Design Certification/Exercices/Learn CSS Colors by Building a Set of Colored Markers/index.html
@@ -6,5 +6,12 @@
     <title>Colored Markers</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>CSS Color Markers</h1>
+    <div class="container">
+      <div class="marker one"></div>
+      <div class="marker two"></div>
+      <div class="marker three"></div>
+    </div>
+  </body>
 </html>
