--- a/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/index.html
+++ b/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Registration Form</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Colored Markers</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body></body>
 </html>
