--- a/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/index.html
+++ b/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/index.html
@@ -10,9 +10,9 @@
     <h1>Registration Form</h1>
     <p>Please fill out this form with the required information</p>
     <form action="https://register-demo.freecodecamp.org" method="post">
-      <fielset></fielset>
-      <fielset></fielset>
-      <fielset></fielset>
+      <fieldset></fieldset>
+      <fieldset></fieldset>
+      <fieldset></fieldset>
     </form>
   </body>
 </html>
