--- a/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/index.html
+++ b/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/index.html
@@ -22,7 +22,11 @@
         /></label>
         <label for="new-password"
           >Create a New Password:
-          <input id="new-password" type="password" minlength="8" required
+          <input
+            id="new-password"
+            type="password"
+            pattern="[a-z0-5]{8,}"
+            required
         /></label>
       </fieldset>
       <fieldset></fieldset>
