Step 24 Start by adding two label elements to the second fieldset.

--- a/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/index.html
+++ b/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/index.html
@@ -29,7 +29,10 @@
             required
         /></label>
       </fieldset>
-      <fieldset></fieldset>
+      <fieldset>
+        <label for=""></label>
+        <label for=""></label>
+      </fieldset>
       <fieldset></fieldset>
       <input type="submit" value="Submit" />
     </form>
