Step 25 To do this, within each of the first two label elements, add one input element with type=radio.

--- a/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/index.html
+++ b/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/index.html
@@ -30,8 +30,8 @@
         /></label>
       </fieldset>
       <fieldset>
-        <label for=""></label>
-        <label for=""></label>
+        <label for=""><input type="radio"></label>
+        <label for=""><input type="radio"></label>
       </fieldset>
       <fieldset></fieldset>
       <input type="submit" value="Submit" />
