--- a/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/index.html
+++ b/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/index.html
@@ -30,8 +30,8 @@
         /></label>
       </fieldset>
       <fieldset>
-        <label for=""><input type="radio"></label>
-        <label for=""><input type="radio"></label>
+        <label><input type="radio" name="account-type" /> Personal</label>
+        <label><input type="radio" name="account-type" /> Business</label>
       </fieldset>
       <fieldset></fieldset>
       <input type="submit" value="Submit" />
