--- a/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/index.html
+++ b/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/index.html
@@ -46,9 +46,13 @@
         >
       </fieldset>
       <fieldset></fieldset>
-      <label for="terms-and-conditions"
-        ><input id="terms-and-conditions" type="checkbox" required
-      /></label>
+      <label for="terms-and-conditions">
+        <input id="terms-and-conditions" type="checkbox" required /> I accept
+        the
+        <a href="https://www.freecodecamp.org/news/terms-of-service/"
+          >terms and conditions</a
+        >
+      </label>
       <input type="submit" value="Submit" />
     </form>
   </body>
