--- a/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/index.html
+++ b/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/index.html
@@ -45,7 +45,13 @@
           Business</label
         >
       </fieldset>
-      <fieldset></fieldset>
+      <fieldset>
+        <input type="file" />
+        <label
+          >Upload a profile picture:
+          <input type="file" />
+        </label>
+      </fieldset>
       <label for="terms-and-conditions">
         <input id="terms-and-conditions" type="checkbox" required /> I accept
         the
