--- a/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/index.html
+++ b/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/index.html
@@ -46,11 +46,10 @@
         >
       </fieldset>
       <fieldset>
-        <input type="file" />
+        <label>Upload a profile picture: <input type="file" /></label>
         <label
-          >Upload a profile picture:
-          <input type="file" />
-        </label>
+          >Input your age (years): <input type="number" min="13" max="120"
+        /></label>
       </fieldset>
       <label for="terms-and-conditions">
         <input id="terms-and-conditions" type="checkbox" required /> I accept
