--- a/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/index.html
+++ b/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/index.html
@@ -50,13 +50,14 @@
         <label
           >Input your age (years): <input type="number" min="13" max="120"
         /></label>
-        <select for="dropdown">
-          <option></option>
-          <option></option>
-          <option></option>
-          <option></option>
-          <option></option>
-        </select>
+        <label
+          >How did you hear about us?<select>
+            <option></option>
+            <option></option>
+            <option></option>
+            <option></option>
+            <option></option></select
+        ></label>
       </fieldset>
       <label for="terms-and-conditions">
         <input id="terms-and-conditions" type="checkbox" required /> I accept
