--- a/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/index.html
+++ b/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/index.html
@@ -51,13 +51,15 @@
           >Input your age (years): <input type="number" min="13" max="120"
         /></label>
         <label
-          >How did you hear about us?<select>
-            <option></option>
-            <option></option>
-            <option></option>
-            <option></option>
-            <option></option></select
-        ></label>
+          >How did you hear about us?
+          <select>
+            <option>(select one)</option>
+            <option>freeCodeCamp News</option>
+            <option>freeCodeCamp YouTube Channel</option>
+            <option>freeCodeCamp Forum</option>
+            <option>Other</option>
+          </select></label
+        >
       </fieldset>
       <label for="terms-and-conditions">
         <input id="terms-and-conditions" type="checkbox" required /> I accept
