--- a/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/index.html
+++ b/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/index.html
@@ -46,13 +46,16 @@
         >
       </fieldset>
       <fieldset>
-        <label>Upload a profile picture: <input type="file" /></label>
-        <label
-          >Input your age (years): <input type="number" min="13" max="120"
+        <label for="profile-picture"
+          >Upload a profile picture: <input id="profile-picture" type="file"
         /></label>
-        <label
+        <label for="age"
+          >Input your age (years):
+          <input id="age" type="number" min="13" max="120"
+        /></label>
+        <label for="referrer"
           >How did you hear about us?
-          <select>
+          <select id="referrer">
             <option value="">(select one)</option>
             <option value="1">freeCodeCamp News</option>
             <option value="2">freeCodeCamp YouTube Channel</option>
@@ -60,7 +63,10 @@
             <option value="4">Other</option>
           </select>
         </label>
-        <label>Provide a bio:<textarea></textarea></label>
+        <label for="bio"
+          >Provide a bio:
+          <textarea id="bio"></textarea>
+        </label>
       </fieldset>
       <label for="terms-and-conditions">
         <input id="terms-and-conditions" type="checkbox" required /> I accept
