--- a/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/index.html
+++ b/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/index.html
@@ -65,7 +65,7 @@
         </label>
         <label for="bio"
           >Provide a bio:
-          <textarea id="bio"></textarea>
+          <textarea id="bio" rows="3" cols="30"></textarea>
         </label>
       </fieldset>
       <label for="terms-and-conditions">
