--- a/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/index.html
+++ b/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/index.html
@@ -37,6 +37,7 @@
         <legend>Account type (required)</legend>
         <label for="personal-account"
           ><input
+            class="inline"
             id="personal-account"
             type="radio"
             name="account-type"
@@ -45,7 +46,12 @@
           Personal</label
         >
         <label for="business-account"
-          ><input id="business-account" type="radio" name="account-type" />
+          ><input
+            class="inline"
+            id="business-account"
+            type="radio"
+            name="account-type"
+          />
           Business</label
         >
       </fieldset>
