--- a/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/index.html
+++ b/Responsive Web Design Certification/Exercices/Learn HTML Forms by Building a Registration Form/index.html
@@ -87,6 +87,7 @@
       </fieldset>
       <label for="terms-and-conditions">
         <input
+          class="inline"
           id="terms-and-conditions"
           name="terms-and-conditions"
           type="checkbox"
