--- a/Responsive Web Design Certification/Exercices/Learn CSS Flexbox by Building a Photo Gallery/index.html
+++ b/Responsive Web Design Certification/Exercices/Learn CSS Flexbox by Building a Photo Gallery/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link ref="stylesheet" href="style.css" />
+    <link ref="stylesheet" href="styles.css" />
     <title>Photo Gallery</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <h1>css flexbox photo gallery</h1>
+    </header>
+  </body>
 </html>
