--- a/Responsive Web Design Certification/Exercices/Learn CSS Flexbox by Building a Photo Gallery/index.html
+++ b/Responsive Web Design Certification/Exercices/Learn CSS Flexbox by Building a Photo Gallery/index.html
@@ -13,30 +13,39 @@
     <div class="gallery">
       <img
         src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg"
+        alt="12345"
       />
       <img
         src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg"
+        alt="12345"
       />
       <img
         src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg"
+        alt="12345"
       />
       <img
         src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg"
+        alt="12345"
       />
       <img
         src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg"
+        alt="12345"
       />
       <img
         src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg"
+        alt="12345"
       />
       <img
         src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/7.jpg"
+        alt="12345"
       />
       <img
         src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/8.jpg"
+        alt="12345"
       />
       <img
         src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/9.jpg"
+        alt="12345"
       />
     </div>
   </body>
