--- a/Responsive Web Design Certification/Exercices/Learn Typography by Building a Nutrition Label/index.html
+++ b/Responsive Web Design Certification/Exercices/Learn Typography by Building a Nutrition Label/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800"
+    />
+    <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
   </head>
   <body>
