--- a/Responsive Web Design Certification/Exercices/Learn Typography by Building a Nutrition Label/index.html
+++ b/Responsive Web Design Certification/Exercices/Learn Typography by Building a Nutrition Label/index.html
@@ -11,8 +11,12 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Nutrition Facts</h1>
-    <p>8 servings per container</p>
-    <p>Serving size 2/3 cup (55g)</p>
+    <body>
+      <div class="label">
+        <h1>Nutrition Facts</h1>
+        <p>8 servings per container</p>
+        <p>Serving size 2/3 cup (55g)</p>
+      </div>
+    </body>
   </body>
 </html>
