--- a/Responsive Web Design Certification/Exercices/Learn Typography by Building a Nutrition Label/index.html
+++ b/Responsive Web Design Certification/Exercices/Learn Typography by Building a Nutrition Label/index.html
@@ -15,8 +15,8 @@
       <div class="label">
         <h1>Nutrition Facts</h1>
         <div class="divider">
-          <p>8 servings per container</p>
-          <p>Serving size 2/3 cup (55g)</p>
+          <p class="bold">8 servings per container</p>
+          <p class="bold">Serving size 2/3 cup (55g)</p>
         </div>
       </div>
     </body>
