--- a/Responsive Web Design Certification/Exercices/Learn Typography by Building a Nutrition Label/index.html
+++ b/Responsive Web Design Certification/Exercices/Learn Typography by Building a Nutrition Label/index.html
@@ -15,7 +15,7 @@
       <div class="label">
         <h1>Nutrition Facts</h1>
         <div class="divider">
-          <p class="bold">8 servings per container</p>
+          <p>8 servings per container</p>
           <p class="bold">Serving size 2/3 cup (55g)</p>
         </div>
       </div>
