--- a/Responsive Web Design Certification/Exercices/Learn Typography by Building a Nutrition Label/index.html
+++ b/Responsive Web Design Certification/Exercices/Learn Typography by Building a Nutrition Label/index.html
@@ -13,11 +13,12 @@
   <body>
     <body>
       <div class="label">
-        <h1 class="bold">Nutrition Facts</h1>
-        <div class="divider">
+        <header>
+          <h1 class="bold">Nutrition Facts</h1>
+          <div class="divider"></div>
           <p>8 servings per container</p>
-          <p class="bold">Serving size<span>2/3 cup (55g)</span></p>
-        </div>
+          <p class="bold">Serving size <span>2/3 cup (55g)</span></p>
+        </header>
       </div>
     </body>
   </body>
