--- a/Responsive Web Design Certification/Exercices/Learn Typography by Building a Nutrition Label/index.html
+++ b/Responsive Web Design Certification/Exercices/Learn Typography by Building a Nutrition Label/index.html
@@ -27,6 +27,7 @@
           </div>
           <span>230</span>
         </div>
+        <div class="divider medium"></div>
       </div>
     </body>
   </body>
