--- a/Responsive Web Design Certification/Exercices/Learn Typography by Building a Nutrition Label/index.html
+++ b/Responsive Web Design Certification/Exercices/Learn Typography by Building a Nutrition Label/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="divider medium"></div>
         <div class="daily-value small-text">
-          <p class="bold right">% Daily Value *</p>
+          <p class="bold right">% Daily Value *<div class="divider"></div></p>
         </div>
       </div>
     </body>
